--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,7 +7,7 @@
                 <h1 class="title">New Music page</h1>
             </div>
         </section>
-            <form action="/products" method="POST">
+            <form action="/music" method="POST">
                 <div class="field">
                     <label class="label">Music Name</label>
                     <div class="control">
