--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,25 +16,25 @@
     
     <main class="container is-max-widescreen">
         <div class="columns is-multiline p-5">
-            <% for(let idx = 0; idx < music.length; idx++){ %> 
-                <% const music = music[idx] %>
+            <% for(let idx = 0; idx < songs.length; idx++){ %> 
+                <% const songs = songs[idx] %>
                 
                 <div class="column is-one-third">
                     <article class="card">
                         <section class="card-image">
                             <figure class="image is-3by3">
-                                <img src="<%= music.image %>" alt="Placeholder image" />
+                                <img src="<%= songs.image %>" alt="Placeholder image" />
                             </figure>
                         </div>
                     </section>
                     <div class="card-content">
                         <div class="content">
                             <h3>
-                                <a href="/music/<%= music.id %>"><%= music.song %> </a>
+                                <a href="/songs/<%= songs.id %>"><%= songs.song %> </a>
                             </h3>
                             
-                            <p>$<%= music.singer %></p>
-                            <p>$<%= music.date %></p>
+                            <p>$<%= songs.singer %></p>
+                            <p>$<%= songs.date %></p>
                         </div>
                     </div>
                 </article>
