--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,61 +1,37 @@
 <!DOCTYPE html>
-<html>
-    
-<body>
-        <section class="hero-is-medium has-background-light">
-            <div class="hero-body">
-                <h1 class="title">New Music page</h1>
-            </div>
-        </section>
+    <html>
+        <%- include ('./partials/head.ejs', {page: 'New'}) %>
+        <%- include ('./partials/nav.ejs') %>
+        <section class="selector">
             <form action="/songs" method="POST">
-                <div class="field">
-                    <label class="label">Song Title</label>
-                    <div class="control">
-                        <input
-                            class="input"
-                            type="text"
-                            placeholder="new song"
-                            name="title"
-                        />
-                    </div>
-                </div>
-        
-                <div class="field">
-                    <label class="label">Singer</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="singer" name="name" />
-                    </div>
-                </div>
-        
-                <div class="field">
-                    <label class="label">Song Image</label>
-                    <div class="control">
-                        <input
-                            class="input"
-                            type="text"
-                            placeholder="http://"
-                            name="image"
-                        />
-                    </div>
-                </div>
-                <div class="field">
-                    <label class="label">Date of release</label>
-                    <div class="control">
-                        <input
-                            class="input"
-                            type="text"
-                            placeholder="0000"
-                            name="date"
-                        />
-                    </div>
-                </div>
-        
-                <div class="field is-grouped">
-                    <div class="control">
-                        <button class="button is-info">Create Song</button>
-                    </div>
-                </div>
+                <fieldset>
+                    <legend>New song</legend>
+                        <div class="form-group">
+                          <label for="song-title">Song title</label>
+                          <input type="text" placeholder ="Song title" id="title" />
+                        </div>
+
+                        <div class="form-group">
+                          <label for="singer-name">Singer</label>
+                          <input type="text" placeholder="singer" id="singer"/>
+                        </div>
+
+                        <div class="form-group">
+                          <label for="song-image">Song image</label>
+                          <input type="text" placeholder="song image" name="image"/>
+                        </div>
+
+                        <div class="form-group">
+                          <label for="date">Date of release</label>
+                          <input type="text" placeholder="date of release" name="date"/>
+                        </div>
+
+                        <div class="control">
+                            <button class="button is-info">Create Song</button>
+                        </div>
+                </fieldset>
             </form>
         </section>
+                
     </body>
 </html>
