--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,73 +1,24 @@
 <!DOCTYPE html>
-<html>
-<head>        
-	<meta charset="utf-8">
+    <html>
+        <%- include ('./partials/head.ejs', {page: song.title }) %>
+        <%- include ('./partials/nav.ejs') %>
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-<link rel="stylesheet" href="../public/styles/main.css">
-	<title>Songs</title>    
-</head>    
-<body>
-  <nav
-  class="navbar is-dark is-fixed-top"
-  role="navigation"
-  aria-label="main navigation"
->
-  <div class="navbar-brand">
-    <a class="navbar-item" href="/songs"> All Songs</a>
-
-    <a
-      role="button"
-      class="navbar-burger"
-      aria-label="menu"
-      aria-expanded="false"
-      data-target="navbarBasicExample"
-    >
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
-  </div>
-  <!-- this will add a link to the new route -->
-  <div class="navbar-menu navbar-end">
-    <a class="navbar-item" href="/songs/new"> New Song </a>
-  </div>
-</nav>
-
-	<section class="hero is-medium has-background-light">
-    <div class="hero-body">
-			<h1 class="title">Song Show Page</h1>
-    </div>
-  </section> 
-
-
-  
-  
-  <div class="container is-max-widescreen p-5">
-    <article class="media">
-      <figure class="media-left">
-        <p class="image is-328x328">
-          <img src="<%= song.image %>" alt="song img" />
-        </p>
-      </figure>
-      <div class="media-content">
-        <div class="content">
-          <h3> <%= song.title %></h3>
-          <small><%= song.singer %></small>
-          <small><%= song.date %></small>
-          <div class="field mt-5 is-grouped">
-            <div class="control">
-              <a class="button is-info" href="/songs/<%= song.id %>/edit">Edit Product
-              </a>
-            </div>
-            <p class="control">
-              <form action="/songs/<%= song.id %>?_method=DELETE" method="POST">
-                  <input class="button is-danger" type="submit" value="	Delete Song"/>                    
-              </form>
-          
-        </div>
-      </div>
-    </article>
-  </div>
-</body>
-</html>
+          <div class="card " style="width: 50rem;" >
+              <img class="card-img-top" src="<%= song.image %>" alt="Card image cap"/>
+              <div class="card-body">
+                  <h3 class="card-title">
+                      <a href="/songs/<%= song.id %>"><%= song.title %> </a>
+                  </h3>
+                  <h5><%= song.singer %></h5>
+                  <p><%= song.date %></p>
+                  <div class="control">
+                    <a class="button " href="/songs/<%= song.id %>/edit">Edit Song</a>
+                  </div>
+                  <form action="/songs/<%= song.id %>?_method=DELETE" method="POST">
+                    <input class="btn btn-danger" type="submit" value="	Delete Song"/>                    
+                  </form>
+              </div>
+                  
+          </div>
+      </body>
+    </html>
