--- a/views/404.ejs
+++ b/views/404.ejs
@@ -15,7 +15,7 @@
             
             <div class="contant_box_404">
             <h3 class="h2">
-            Look like you're lost
+              the page you are looking for not avaible!
             </h3>
             
             <p>the page you are looking for not avaible!</p>
@@ -29,25 +29,6 @@
         </section>
     
       
-            <!-- <section class="hero is-medium has-background-light">
-                <div class="hero-body">
-				<img
-          width="300px"
-          src="https://media.giphy.com/media/xTiN0L7EW5trfOvEk0/giphy.gif"
-          alt="not found"
-        />
-        <p class="title">404 Not Found 😞</p>
-        <% if (error) { %>
-        <p><%= error.message %></p>
-        <% } %>
-      </div>
-    </section>
-    <main class="container is-max-widescreen">
-      <div class="columns p-6">
-        <div class="column">
-          <a class="button is-info" href="/products">Back To All Products</a>
-        </div>
-      </div>
-    </main> -->
+            
   </body>
 </html>
