--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
                                 <img class="card-img-top" src="<%= song.image %>" alt="Card image cap"/>
                                 <div class="card-body">
                                     <h3 class="card-title">
-                                        <a href="/songs/<%= song.id %>"><%= song.title %> </a>
+                                        <a href="/songs/<%= song._id %>"><%= song.title %> </a>
                                     </h3>
                                     <h5><%= song.singer %></h5>
                                     <p><%= song.date %></p>
