--- a/views/show.ejs
+++ b/views/show.ejs
@@ -7,14 +7,14 @@
               <img class="card-img-top" src="<%= song.image %>" alt="Card image cap"/>
               <div class="card-body">
                   <h3 class="card-title">
-                      <a href="/songs/<%= song.id %>"><%= song.title %> </a>
+                      <a href="/songs/<%= song._id %>"><%= song.title %> </a>
                   </h3>
                   <h5><%= song.singer %></h5>
                   <p><%= song.date %></p>
                   <div class="control">
-                    <a class="button " href="/songs/<%= song.id %>/edit">Edit Song</a>
+                    <a class="button " href="/songs/<%= song._id %>/edit">Edit Song</a>
                   </div>
-                  <form action="/songs/<%= song.id %>?_method=DELETE" method="POST">
+                  <form action="/songs/<%= song._id %>?_method=DELETE" method="POST">
                     <input class="btn btn-danger" type="submit" value="	Delete Song"/>                    
                   </form>
               </div>
